--- a/rcl/CMakeLists.txt
+++ b/rcl/CMakeLists.txt
@@ -24,6 +24,7 @@ set(${PROJECT_NAME}_sources
   src/rcl/node.c
   src/rcl/publisher.c
   src/rcl/rcl.c
+  src/rcl/service.c
   src/rcl/subscription.c
   src/rcl/wait.c
   src/rcl/time.c
